--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -38,18 +38,24 @@ option.placeholder
     color: #000000
 
 #throbber
-  background-color: #555555
-  height: 100%
-  opacity: 0.4
-  position: absolute
-  top: 0
-  width: 100%
-  z-index: 1500
+  display: none
 
-#throbber-img
-  bottom: 50%
-  left: 50%
-  position: absolute
-  right: 50%
-  top: 50%
-  z-index: 1525
+  #throbber-bg
+    background-color: #555555
+    height: 100%
+    opacity: 0.4
+    position: absolute
+    top: 0
+    width: 100%
+    z-index: 1500
+
+  #throbber-img
+    bottom: 50%
+    left: 50%
+    position: absolute
+    right: 50%
+    top: 50%
+    z-index: 1525
+
+#image-sources
+  display: none
