Fix Layoutproblemchen nach Verkleinerung der Minimal-Menü-Breite (Redmine #500)

--- a/app/assets/stylesheets/bootstrap_and_override.sass
+++ b/app/assets/stylesheets/bootstrap_and_override.sass
@@ -25,6 +25,10 @@ h5,
 .panel-title
   line-height: 2em
 
+.panel-default > .panel-heading
+  @media (max-width: 400px)
+    min-height: 5em
+
 .panel-body.list-group
   padding: 0
 
