--- a/app/assets/javascripts/maps.coffee.erb
+++ b/app/assets/javascripts/maps.coffee.erb
@@ -335,12 +335,11 @@ $ ->
   KS.olMap = new KS.Map
 
   KS.map.actions().on('click', 'a.describe', (event) ->
-    if KS.newFeatureOverlay.getFeatures().getArray().length > 0
+    if (features = KS.newFeatureOverlay.getFeatures().getArray()).length > 0
       $.ajax
         url: $(@).attr('href')
         data:
-          position: KS.newFeatureOverlay.getFeatures().getArray()[0].getGeometry().transform(
-            KS.projection(), KS.projectionWGS84).flatCoordinates
+          position: features[0].getGeometry().transform(KS.projection(), KS.projectionWGS84).getCoordinates()
         dataType: 'script'
     return false
   ).on('click', 'a.cancel', ->
