--- a/app/views/requests/_show.html.erb
+++ b/app/views/requests/_show.html.erb
@@ -110,12 +110,14 @@
       </div>
       <div class="list-group-item actions">
         <% options = { remote: true, class: 'btn btn-default', role: :button } -%>
+        <% if false -%>
+          <div class="btn-group btn-group-justified" role="group">
+            <%= link_to(t('.actions.vote'), [:new, @request, :vote, id_list: @id_list], options) %>
+            <%= link_to(t('.actions.abuse'), [:new, @request, :abuse, id_list: @id_list], options) %>
+          </div>
+        <% end -%>
         <div class="btn-group btn-group-justified" role="group">
-          <%= link_to(t('.actions.vote'), [:new, @request, :vote, id_list: @id_list], options) %>
-          <%= link_to(t('.actions.abuse'), [:new, @request, :abuse, id_list: @id_list], options) %>
-        </div>
-        <div class="btn-group btn-group-justified" role="group">
-          <%= link_to(t('.actions.comment'), [:new, @request, :comment, id_list: @id_list], options.merge(class: 'btn btn-default')) %>
+          <%#= link_to(t('.actions.comment'), [:new, @request, :comment, id_list: @id_list], options.merge(class: 'btn btn-default')) %>
           <%= link_to(t('.actions.kod'), "#", options.merge(class: 'btn btn-default disabled')) %>
         </div>
       </div>
