--- a/app/views/requests/_edit.html.erb
+++ b/app/views/requests/_edit.html.erb
@@ -36,7 +36,7 @@
         <div class="form-group">
           <%= f.label(:description, Request.human_attribute_name(:description), class: 'col-md-2 control-label') %>
           <div class="col-md-10">
-            <%= f.text_area(:description, rows: 5, class: 'form-control') %>
+            <%= f.text_area(:description, rows: 5, class: 'form-control', disabled: !@request.description_public) %>
           </div>
         </div>
         <div class="form-group">
