--- a/app/views/protocol_mailer/protocol.text.erb
+++ b/app/views/protocol_mailer/protocol.text.erb
@@ -1,5 +1,4 @@
-<%= t("username") %>: <%= @protocol.user %>
+<%= Protocol.human_attribute_name(:recorder) %>: <%= @protocol.user %>
 <%= Protocol.human_attribute_name(:process_number) %>: <%= @protocol.process_number %>
-<%= Protocol.human_attribute_name(:message_number) %>: <%= @protocol.message_number %>
-<% unless @protocol.process_number.blank? %><%= "#{ Settings::Url.ks_backend_vorgang_url % @protocol.process_number }" %><% end %>
+<%= Protocol.human_attribute_name(:message_number) %>: <%= @protocol.message_number %> <% unless @protocol.message_number.blank? %>(siehe <%= "#{ Settings::Url.ks_backend_vorgang_url % @protocol.message_number }" %>/uebersicht)<% end %>
 <%= Protocol.human_attribute_name(:text) %>: <%= @protocol.text %>
