Anzeigen von Fehlermeldungen beim Bearbeiten von Meldungen und Senden von internen Kommentaren bei fehlenden Berechtigungen

--- a/app/views/requests/_show.html.erb
+++ b/app/views/requests/_show.html.erb
@@ -71,7 +71,7 @@
           </p>
         </div>
       <% end -%>
-      <% if (comments = @request.comments.to_a).present? && @show_comments -%>
+      <% if @show_comments && (comments = @request.comments.to_a).present? -%>
         <div class="list-group-item">
           <div class="panel panel-default">
             <div class="panel-heading">
