B.2 - Trust-Level einmalig beim Anlegen von Vorgängen ermitteln

--- a/app/assets/javascripts/maps.coffee.erb
+++ b/app/assets/javascripts/maps.coffee.erb
@@ -248,7 +248,7 @@ class KS.FeatureData
         attribution = "" if elem.extended_attributes.photo_required
 
         count = 1
-        while count < elem.extended_attributes.trust
+        while count <= elem.extended_attributes.trust
           attribution += ""
           count++
 
