--- a/app/views/notes/_new.html.erb
+++ b/app/views/notes/_new.html.erb
@@ -12,7 +12,7 @@
           </div>
         </div>
         <div class="row">
-          <% if @show_email -%>
+          <% if display?(:email) -%>
             <div class="col-md-8">
               <div class="form-group has-feedback has-clear">
                 <div class="input-group">
@@ -23,7 +23,7 @@
               </div>
             </div>
           <% end -%>
-          <div class="col-md-<%= @show_email ? 4 : 12 %>">
+          <div class="col-md-<%= display?(:email) ? 4 : 12 %>">
             <div class="form-group">
               <div class="btn-group btn-group-justified" role="group">
                 <div class="btn-group" role="group">
