--- a/app/views/requests/_edit.html.erb
+++ b/app/views/requests/_edit.html.erb
@@ -27,7 +27,7 @@
                            placeholder: t('placeholder.select.service') }) %>
           </div>
         </div>
-        <% if @show_email -%>
+        <% if display?(:email) -%>
           <div class="form-group">
             <%= f.label(:email, Request.human_attribute_name(:email), class: 'col-md-2 control-label') %>
             <div class="col-md-10">
