--- a/app/views/requests/_show_panel_title_buttons.html.erb
+++ b/app/views/requests/_show_panel_title_buttons.html.erb
@@ -2,13 +2,13 @@
 <span class="badge pull-right clickable" data-target="<%= request_path(request, id_list: id_list) %>">
   <span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
 </span>
-<% if @show_edit_request -%>
+<% if display?(:edit_request) -%>
   <span class="badge pull-right clickable" data-target="<%= edit_request_path(request, id_list: id_list) %>">
     <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
   </span>
 <% end -%>
 
-<% if request.job_status && @show_edit_status -%>
+<% if request.job_status && display?(:edit_status) -%>
   <div class="btn-group pull-right">
     <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
       <span class="glyphicon glyphicon-flag <%= request.flag_color_class %>" aria-hidden="true"></span>
