Sichtbarkeit Trust-Level-Sterne über settings.yml steuerbar gemacht; Ergänzung eines fehlenden Eintrags in der settings.sample.yml im Nachgang des vorangegangenen Commits

--- a/app/assets/javascripts/maps.coffee.erb
+++ b/app/assets/javascripts/maps.coffee.erb
@@ -247,10 +247,12 @@ class KS.FeatureData
         attribution = ""
         attribution = "" if elem.extended_attributes.photo_required
 
+        <% if Settings::Map.show_trust %>
         count = 1
         while count <= elem.extended_attributes.trust
           attribution += ""
           count++
+        <% end %>
 
         coord = ol.proj.transform([elem.long, elem.lat], KS.projectionWGS84, KS.projection())
         f = new ol.Feature
