--- a/app/views/jobs/_index.html.erb
+++ b/app/views/jobs/_index.html.erb
@@ -13,7 +13,9 @@
               <span class="glyphicon glyphicon-flag <%= job.flag_color_class %>" aria-hidden="true"></span>
               #<%= job.id %> <%= job.service.group %> – <%= job.service_name %>
               <%= mark_photo_required(job) %>
-              <%= mark_trust(job) %>
+              <% if display?(:trust) -%>
+                <%= mark_trust(job) %>
+              <% end -%>
               <span class="badge sort-handle">
                 <span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span>
                 <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span>
@@ -26,7 +28,9 @@
                 <span class="glyphicon glyphicon-flag <%= job.flag_color_class %>" aria-hidden="true"></span>
                 #<%= job.id %>
                 <%= mark_photo_required(job) %>
-                <%= mark_trust(job) %>
+                <% if display?(:trust) -%>
+                  <%= mark_trust(job) %>
+                <% end -%>
               </span>
               <span class="badge sort-handle">
                 <span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span>
